<resources>
    <string name="app_name">Assginment2</string>
    <string name="name">이름</string>
    <string name="id">깃허브 아이디</string>
    <string name="password">비밀번호</string>
    <string name="plz_id">아이디를 입력해 주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="following">팔로잉 화면</string>
    <string name="userId">userID</string>
    <string name="more">MORE</string>
    <string name="rp_name">레포지터리 이름</string>
    <string name="rp_explain">레포지터리 설명</string>
    <string name="language">언어</string>
    <string name="login">Login</string>
    <string name="plz_password">비밀번호를 입력헤주세요</string>
    <string name="no_id">아이디/비밀번호가 없으신가요?</string>
    <string name="sign_up">회원가입</string>
    <string name="logout">로그아웃</string>
</resources>